Permalink fixes, add checkout pages

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ highlighter: rouge
 sass:
   style: compressed
 
+permalink: /:path/:basename
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -75,3 +77,9 @@ defaults:
       type: "docs"
     values:
       layout: "docs"
+  - scope:
+      path: "checkout/**"
+    values:
+      layout: "default"
+      sitemap: false
+    
